# posts-app-api

./: README.md  pyproject.toml  requirements.txt
app/app/: settings.py  urls.py
app/posts/: models.py  serializers.py  views.py
app/posts/migrations/: 0001_initial.py
