[tool.poetry]
name = "posts-app-api"
version = "0.1.0"
description = ""
authors = ["rgolovnya <rgolovnya@yahoo.com>"]

[tool.poetry.dependencies]
python = "^3.6"
autopep8 = "^1.5.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
